gcc/testsuite/g++.dg/coroutines/co-yield-syntax-0.C
//  { dg-additional-options "-fsyntax-only -w" }

#include "coro.h"

void foo () {
  co_yield;  // { dg-error "expected primary-expression before" }
}
